--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+snack-bar-container.greenSnackBar span.mat-button-wrapper {
+    color: greenyellow;
+}
+
+snack-bar-container.redSnackBar span.mat-button-wrapper {
+    color: red;
+}
