--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,6 +3,7 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span><a mat-button routerLink="/users">Users</a></span>
+    <span><a mat-button routerLink="/groups">Groups</a></span>
 
     <span class="spacer"></span>
     
