--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit()" #formModel="ngForm">
 <mat-card>
     <mat-card-header>
       <mat-card-title>Please, log in...</mat-card-title>
@@ -7,7 +7,9 @@
       <p>
         <mat-form-field appearance="fill">
             <mat-label>Enter your username</mat-label>
-            <input matInput type="text" [(ngModel)]="auth.name" name="name">
+            <input matInput type="text" required minlength="3" [(ngModel)]="auth.name" name="name">
+            <mat-hint>login is valid</mat-hint>
+            <mat-error>Need to have at least 3 chars</mat-error>
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>Enter your password</mat-label>
@@ -19,7 +21,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button color="primary" type="submit">Login</button>
+      <button mat-button color="primary" type="submit" [disabled]="formModel.form.invalid">Login</button>
     </mat-card-actions>
   </mat-card>
 </form>
