--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
         </button>
     </ng-template>
     <ng-template #elseBlock>
+        <a mat-button routerLink="/register">
+            <mat-icon>person_add</mat-icon> Register
+        </a>
         <a mat-button routerLink="/login">
             <mat-icon>login</mat-icon> Login
         </a>
