--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,6 +4,7 @@
     </button>
     <span><a mat-button routerLink="/users">Users</a></span>
     <span><a mat-button routerLink="/groups">Groups</a></span>
+    <span><a mat-button routerLink="/films">Films</a></span>
 
     <span class="spacer"></span>
     
