--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,6 +5,7 @@
     <span><a mat-button routerLink="/users">Users</a></span>
     <span><a mat-button routerLink="/groups">Groups</a></span>
     <span><a mat-button routerLink="/films">Films</a></span>
+    <span><a mat-button routerLink="/chat">Chat</a></span>
 
     <span class="spacer"></span>
     
